--- a/YLMES/Views/Home/Gathering.cshtml
+++ b/YLMES/Views/Home/Gathering.cshtml
@@ -40,7 +40,7 @@ white-space: normal;
             });
             $("#throung").click(function () {
                 var bianhao = '@ViewData["CNumbers"]';
-                if ('@ViewData["name"]' == "11") {
+                if ('@ViewData["name"]' == "刘杨珍") {
                     $.ajax({
                         url: "/Home/EditStatus",
                         data: { bianhao: bianhao },
@@ -63,7 +63,7 @@ white-space: normal;
                 }
                 else
                 {
-                    layer.msg("只有龙宗德才有资格！");
+                    layer.msg("只有刘杨珍才有资格！");
                 }
                 
             });
