--- a/YLMES/Views/Home/left.cshtml
+++ b/YLMES/Views/Home/left.cshtml
@@ -171,6 +171,9 @@
                                         case "产品包装":
                                             $('#Workshop').append('<li><cite></cite><a href="#">产品包装</a><i hidden=hidden>/ProductionPlanning/ProductPackaging</i></li>')
                                             break;
+                                        case "工单图纸":
+                                            $('#Workshop').append('<li><cite></cite><a href="#">工单图纸</a><i hidden=hidden>/ProductionPlanning/RepairOrderDrawing</i></li>')
+                                            break;
                                     }
                                     break;
                                 case "任务":
