--- a/YLMES/Views/TaskManagement/CompletePurchase.cshtml
+++ b/YLMES/Views/TaskManagement/CompletePurchase.cshtml
@@ -79,12 +79,13 @@
                         , { field: '部件规格', width: 200, title: '部件规格' }
                         , {
                             field: '材料', width: 100, title: '材料'
-                          }
+                        }                   
                         //, { field: '申请采购套数', title: '申请套数', width: 100, edit: Text, style:'color:#009688' }
                         //, { field: '每套数量', width: 150, title: '每套数量', edit: Text, style: 'color: #009688' }
                         //, { field: '实际采购套数', width: 100, title: '实际套数',edit: Text, style: 'color:#009688' }
                         , { field: '实际采购数量', width: 100, title: '实际数量' }
                         , { field: '单位', width: 100, title: '单位' }
+                         , { field: '规格', width: 100, title: '规格' }
                         //, { field: '单位', width: 100, title: '单位', edit: Text, style: 'color: #009688'}
                         , { field: '单价', width: 100, title: '单价', edit: Text, style: 'color: #009688' }
                         , { field: '总价', width: 150, title: '总价', totalRow: true }
