--- a/YLMES/Views/Warehouse/Storage.cshtml
+++ b/YLMES/Views/Warehouse/Storage.cshtml
@@ -61,7 +61,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">库区名</label>
             <div class="layui-input-block" style="width:200px">
-                <input type="text" lay-verify="required" name="WHArea" readonly="readonly" id="kuqu" autocomplete="off" class="layui-input">
+                <input type="text" lay-verify="required" name="WHArea" readonly="readonly" autocomplete="off" class="layui-input" value="@ViewData["name"]">
             </div>
         </div>
         <div class="layui-form-item">
