--- a/YLMES/Views/Warehouse/WHGoodsAlAdd.cshtml
+++ b/YLMES/Views/Warehouse/WHGoodsAlAdd.cshtml
@@ -35,8 +35,8 @@
         <span>位置：</span>
         <ul class="placeul">
             <li><a href="#">首页</a></li>
-            <li><a href="#">采购管理</a></li>
-            <li><a href="#">新增供应商信息</a></li>
+            <li><a href="#">仓库管理</a></li>
+            <li><a href="#">新增货位信息</a></li>
         </ul>
     </div>
     <form class="layui-form" id="form-article-add" style="margin-top:20px">
