--- a/YLMES/css/elemenui.css
+++ b/YLMES/css/elemenui.css
@@ -11497,7 +11497,8 @@ div::-webkit-scrollbar-corner {
     padding: 0 15px;
     -webkit-transition: border-color .2s cubic-bezier(.645,.045,.355,1);
     transition: border-color .2s cubic-bezier(.645,.045,.355,1);
-    width: 100%
+    width: 100%;
+    text-align:center;
 }
 
 .el-input__prefix, .el-input__suffix {
