--- a/YLMES/Views/ProductionPlanning/txt.cshtml
+++ b/YLMES/Views/ProductionPlanning/txt.cshtml
@@ -43,7 +43,7 @@
         <tr>
             <td>数量:</td>
             <td colspan="2" style="text-align:left;">@ViewData["qty"]</td>
-            <td colspan="1" style="text-align:left">单位</td>
+            <td colspan="1" style="text-align:center;vertical-align: middle;">单位:</td>
             <td colspan="1" style="text-align:left">@ViewData["unit"]</td>
         </tr>
         <tr>
