--- a/YLMES/Views/TaskManagement/MyTask.cshtml
+++ b/YLMES/Views/TaskManagement/MyTask.cshtml
@@ -40,36 +40,41 @@
                         , url: '/TaskManagement/TaskDisplay?Status=' + Select
                         , page: true
                         , limit: 15
-                        , done: function () {
-                            $("tr a").hide();
-                            $("tr").hover(function () {
+                        //, done: function () {
+                        //    $("tr a").hide();
+                        //    $("tr").hover(function () {
 
-                                $(this).children().last().children().children().toggle();
-                            })
-                        }
+                        //        $(this).children().last().children().children().toggle();
+                        //    })
+                        //}
                         , cols: [[
-                            { field: '任务名称', width: 220, title: '任务名称' }
+                            { field: '任务名称', width: 250, title: '任务名称' }
                             , { field: '任务类型', width: 100, title: '任务类型' }
                             , { field: '设计类型', width: 100, title: '设计类型' }
-                            , { field: '产品名称', width: 210, title: '产品名称' }
-                            , { field: '产品规格', width: 210, title: '产品规格' }
+                            , { field: '产品名称', width: 250, title: '产品名称' }
+                            , { field: '产品规格', width: 240, title: '产品规格' }
                             , { field: '紧急程度', width: 100, title: '紧急程度' }
                             , { field: '截止日期', width: 150, title: '截止日期' }
                             , { field: '机械设计负责人', width: 100, title: '机械设计' }
                             , { field: '电气设计负责人', width: 100, title: '电气设计' }
                             , { field: '审核人', width: 100, title: '审核人' }
                             , { field: '任务状态', width: 210, title: '任务状态' }
-                            , { field: 'right', width: 100, align: 'center', toolbar: '#barDemo' }
+                           // , { field: 'right', width: 100, align: 'center', toolbar: '#barDemo' }
                         ]]
                     });
-                table.on('tool(demo)', function (obj) {
+                //table.on('tool(demo)', function (obj) {
+                //    var data = obj.data;
+                //    switch (obj.event) {
+                //        case 'add':
+                //            id = data.TaskID;
+                //            window.parent.document.getElementById("rightframe").src = "/TaskManagement/NameTask?id=" + id;
+                //            break;
+                //    };
+                //});
+                table.on('row(demo)', function (obj) {
                     var data = obj.data;
-                    switch (obj.event) {
-                        case 'add':
-                            id = data.TaskID;
-                            window.parent.document.getElementById("rightframe").src = "/TaskManagement/NameTask?id=" + id;
-                            break;
-                    };
+                    var id = data.TaskID
+                    window.parent.document.getElementById("rightframe").src = "/TaskManagement/NameTask?id=" + id;
                 });
             });
             layui.use(['table', 'layer'], function () {
@@ -81,50 +86,55 @@
                    , url: '/TaskManagement/TaskDisplay?Status=' + Select
                    , page: true
                    , limit: 15
-                   , done: function () {
-                       $("tr a").hide();
-                     $("tr").hover(function () {
+                 //  , done: function () {
+                 //      $("tr a").hide();
+                 //    $("tr").hover(function () {
 
-                         $(this).children().last().children().children().toggle();
-                     })
-                 }
+                 //        $(this).children().last().children().children().toggle();
+                 //    })
+                 //}
                    , cols: [[
-                   { field: '任务名称', width: 220, title: '任务名称' }
+                   { field: '任务名称', width: 250, title: '任务名称' }
                   , { field: '任务类型', width: 100, title: '任务类型' }
                   , { field: '设计类型', width: 100, title: '设计类型' }
-                   , { field: '产品名称', width: 210, title: '产品名称' }
-                    , { field: '紧急程度', width: 100, title: '紧急程度' }
-                   , { field: '截止日期', width: 150, title: '截止日期' }
-                    , { field: '机械设计负责人', width: 100, title: '机械设计' }
-                      , { field: '电气设计负责人', width: 100, title: '电气设计' }
-                       , { field: '审核人', width: 100, title: '审核人' }
-                        , { field: '任务状态', width: 210, title: '任务状态' }
-                   , { field: 'right', width: 250, align: 'center', toolbar: '#barDemo' }
+                  , { field: '产品名称', width: 250, title: '产品名称' }
+                  , { field: '产品规格', width: 240, title: '产品规格' }
+                  , { field: '紧急程度', width: 100, title: '紧急程度' }
+                  , { field: '截止日期', width: 150, title: '截止日期' }
+                  , { field: '机械设计负责人', width: 100, title: '机械设计' }
+                  , { field: '电气设计负责人', width: 100, title: '电气设计' }
+                  , { field: '审核人', width: 100, title: '审核人' }
+                  , { field: '任务状态', width: 210, title: '任务状态' }
+                   //, { field: 'right', width: 250, align: 'center', toolbar: '#barDemo' }
                    ]]
                     });
                 });
                 table.on('checkbox(demo)', function (obj) {
                     console.log(obj)
                 });
-
-                table.on('tool(demo)', function (obj) {
+                table.on('row(demo)', function (obj) {
                     var data = obj.data;
-                    switch (obj.event) {
-                        case 'add':
-                            id = data.TaskID;
-                            window.parent.document.getElementById("rightframe").src = "/TaskManagement/NameTask?id=" + id;
-                            break;
-                    };
+                    var id = data.TaskID              
+                    window.parent.document.getElementById("rightframe").src = "/TaskManagement/NameTask?id=" + id;                                              
                 });
+                //table.on('tool(demo)', function (obj) {
+                //    var data = obj.data;
+                //    switch (obj.event) {
+                //        case 'add':
+                //            id = data.TaskID;
+                //            window.parent.document.getElementById("rightframe").src = "/TaskManagement/NameTask?id=" + id;
+                //            break;
+                //    };
+                //});
             });
         })
 
 
 
     </script>
-    <script type="text/html" id="barDemo">
+    @*<script type="text/html" id="barDemo">
         <a class="layui-btn layui-btn-xs" id="add" lay-event="add">选择任务</a>
-    </script>
+    </script>*@
 
 
 </head>
