--- a/YLMES/Views/Warehouse/Warehousesetup.cshtml
+++ b/YLMES/Views/Warehouse/Warehousesetup.cshtml
@@ -18,7 +18,6 @@
     <script type="text/html" id="bsarDemo">
         <a class="layui-btn layui-btn-xs" lay-event="sel">查看库区</a>
         <a class="layui-btn layui-btn-xs" lay-event="add">添加仓库</a>
-        <a class="layui-btn layui-btn-xs" lay-event="addWH">增加库区</a>
         <a class="layui-btn layui-btn-xs" lay-event="updata">更新仓库</a>
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除仓库</a>
     </script>
@@ -43,7 +42,7 @@
                         , { field: '描述', width: 210, title: '描述', edit: 'text' }
                         , { field: '建库时间', width: 235, title: '建库时间' }
                         , { field: '建库人', width: 180, title: '建库人', edit: 'text' }
-                        , { field: '状态', width: 100, title: '状态', edit: 'text' }
+                        //, { field: '状态', width: 100, title: '状态', edit: 'text' }
                         , { field: 'right', width: 380, align: 'center', toolbar: '#bsarDemo' }
                     ]]
                 });                
@@ -92,7 +91,7 @@
                             layer.open({
                                 type: 2
                                 , content: '/Warehouse/Warehousesel?id=' + id+'&Name='+Name
-                                ,area: ['90%', '800px']
+                                ,area: ['100%', '100%']
                                 ,anim: 2
                             });
                             break
@@ -148,8 +147,8 @@
         <span>位置：</span>
         <ul class="placeul">
             <li><a href="#">首页</a></li>
-            <li><a href="#">采购管理</a></li>
-            <li><a href="#">采购清单</a></li>
+            <li><a href="#">仓库管理</a></li>
+            <li><a href="#">仓库信息</a></li>
         </ul>
     </div>
     <div class="rightinfo">
